fix:fee structure
